# scan_inconsistency

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/consist/: CMakeLists.txt  Doxyfile.in  README
libs/consist/cmake/: FindG2O.cmake  FindQGLViewer.cmake
libs/consist/forms/: testerwindow.ui
libs/consist/src/consist/: consist.h  foreach.h  gridbisectionoptimizer.cpp  gridbisectionoptimizer.h  gridbisectionoptimizer.hpp  hypothesistester.cpp  hypothesistester.h  hypothesistesteroptions.h  inconsistencyse2.cpp  inconsistencyse2.h  linesegment.h  linesegment.hpp  mapquality.cpp  mapquality.h  mapqualityoptions.h  parallelrunner.h  parallelrunner.hpp  probability.cpp  probability.h  quadrilateral.cpp  quadrilateral.h  stopwatch.h  support.cpp  support.h  support.hpp  visibility.cpp  visibility.h
libs/consist/src/optimizer/: optimizer.cpp  optimizeroptions.cpp  optimizeroptions.h
libs/consist/src/shared/: argumentparser.cpp  argumentparser.h
libs/consist/src/tester/: mapviewer.cpp  mapviewer.h  tester.cpp  testeroptions.cpp  testeroptions.h  testerwindow.cpp  testerwindow.h
src/: CMakeLists.txt  main.cpp
